--- a/EBRoot/WEB-INF/web.xml
+++ b/EBRoot/WEB-INF/web.xml
@@ -44,6 +44,6 @@
 	</servlet-mapping>
 
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>/WEB-INF/views/main.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
